--- a/CV.html
+++ b/CV.html
@@ -8,7 +8,7 @@
     </head>
 
     <body>
-    	<h1>URAHARA</h1>
+
 
     		<section id="lisiere">
 			
@@ -51,6 +51,9 @@
 
     
     	<section id ="informations">
+
+    		<h1>URAHARA <br/></h1>
+    			<h4>Gestionnaire des flux physiques et d’informations</h4>
 
        		<p class="TitreCV">EXPERIENCES</p>
 
