--- a/CV.html
+++ b/CV.html
@@ -9,9 +9,9 @@
 
     <body>
 
-
+			<div id="paragraphelisiere">
     		<section id="lisiere">
-			
+
 				<p class="PhotoProfil"> 
     			<figure>
     			<a target="_blank" href ="img/urahara.png"> <img src="img/urahara_mini.png"  alt="Image Photo de Profil URAHARA" title ="Cliquez sur la photo pour l'agrandir" > <!-- target="_blank" OBLIGATOIREMENT après "<a" sinon ça ne marche pas-->
@@ -27,7 +27,7 @@
 
     			Mail : urahara@toto.com<br/><br/>
 
-    			Téléphone : 0602233232<br/><br/>
+    			Téléphone : 0602233232<br/><br/><br/>
 
     			</p>
 
@@ -39,14 +39,15 @@
 						<li>Méthodes de prévision de vente</li>
 						<li>Outils de planification/Ordonnancement (Gantt, PERT)</li>
 						<li>Utilisation de divers Prologiciel (AS400, Irium)</li>
-						<li>Word/Excel/Powerpoint/Visio/Access</li>
+						<li>Word/Excel/Powerpoint/Visio/Access</li><br/><br/>
 					</ul>
 				</p>
 
-				<h2 id="loisirs"> Loisirs </h2>
+				<h2 id="loisirs"> Loisirs </h2><br/>
 
 
 			</section>
+			</div>
 
 
     
