Ajustement titre et section
-propriété h1 modifié
-mise à jour de la section

--- a/CV.html
+++ b/CV.html
@@ -8,10 +8,10 @@
     </head>
 
     <body>
-    	<h1>URAHARA</h1>
 
+			<div id="paragraphelisiere">
     		<section id="lisiere">
-			
+
 				<p class="PhotoProfil"> 
     			<figure>
     			<a target="_blank" href ="img/urahara.png"> <img src="img/urahara_mini.png"  alt="Image Photo de Profil URAHARA" title ="Cliquez sur la photo pour l'agrandir" > <!-- target="_blank" OBLIGATOIREMENT après "<a" sinon ça ne marche pas-->
@@ -20,14 +20,14 @@
     			</figure>
     			</p>
 
-    			<h1> Contact</h1>
+    			<h2> Contact</h2>
 
     			<p id ="contact">Adresse : 14 allée du Hueco Mundo app 220 <br/>
     			33000 KONOHA<br/><br/>
 
     			Mail : urahara@toto.com<br/><br/>
 
-    			Téléphone : 0602233232<br/><br/>
+    			Téléphone : 0602233232<br/><br/><br/>
 
     			</p>
 
@@ -39,18 +39,22 @@
 						<li>Méthodes de prévision de vente</li>
 						<li>Outils de planification/Ordonnancement (Gantt, PERT)</li>
 						<li>Utilisation de divers Prologiciel (AS400, Irium)</li>
-						<li>Word/Excel/Powerpoint/Visio/Access</li>
+						<li>Word/Excel/Powerpoint/Visio/Access</li><br/><br/>
 					</ul>
 				</p>
 
-				<h2 id="loisirs"> Loisirs </h2>
+				<h2 id="loisirs"> Loisirs </h2><br/>
 
 
 			</section>
+			</div>
 
 
     
     	<section id ="informations">
+
+    		<h1>URAHARA <br/></h1>
+    			<h4>Gestionnaire des flux physiques et d’informations</h4>
 
        		<p class="TitreCV">EXPERIENCES</p>
 
