Correction de code

--- a/CV.html
+++ b/CV.html
@@ -32,8 +32,8 @@
     			</p>
 
 
-    			<h2 id="competences"> Compétences </h2><br/>
-    			<p>
+    			<h2> Compétences </h2>
+    			<p id="competences">
 					<ul>
 						<li>Méthodes de gestion des stocks</li>
 						<li>Méthodes de prévision de vente</li>
@@ -54,7 +54,7 @@
     	<section id ="informations">
 
     		<h1>URAHARA <br/></h1>
-    			<h4>Gestionnaire des flux physiques et d’informations</h4>
+    			<h2>Gestionnaire des flux physiques et d’informations</h2>
 
        		<p class="TitreCV">EXPERIENCES</p>
 
