Introduction Font Awesome 5

--- a/CV.html
+++ b/CV.html
@@ -3,6 +3,10 @@
     <head>
         <meta charset="utf-8" />
         <link rel="stylesheet" href="style.css" />
+        <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">-->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
+
+
 
         <title>CV Urahara</title>
     </head>
@@ -21,10 +25,10 @@
 
     				<h2> Contact</h2>
 
-    				<p id ="contact">Adresse : 14 allée du Hueco Mundo app 220 <br/>
-    				33000 KONOHA<br/><br/>
-    				Mail : urahara@toto.com<br/><br/>
-    				Téléphone : 0602233232<br/><br/>
+    				<i class="fas fa-map-marked-alt" style="font-size:20px">  14 allée du Hueco Mundo app 220<br/>
+    				33000 KONOHA<br/><br/></i>
+    				<i class="fas fa-envelope-open-text" style="font-size:24px">  urahara@toto.com<br/><br/></i>
+    				<i class="fas fa-mobile-alt" style="font-size:24px">  0602233232<br/><br/></i>
     				</p>
 
     				<h2> Compétences </h2><br/>
@@ -37,12 +41,19 @@
 						</ul>
 
 					<h2 id="loisirs"> Loisirs </h2><br/>
+
+					<!--<i class="fa fa-car"style="font-size:48px;""></i><br/> -->
+					<i class='fas fa-bowling-ball' style="font-size:36px"></i>
+					<i class="fa fa-medkit" style="font-size:36px"></i>
+					<i class="fa fa-laptop-code" style="font-size:36px"></i>
+					<i class="fas fa-football-ball" style="font-size:36px;color:red"></i>
+
 				</article>
 			</div>
 
     		<aside id ="informations">
 
-    			<h1>URAHARA <br/></h1>
+    			<h1>URAHARA</h1>
     			<h3>Gestionnaire des flux physiques et d’informations</h3>
 
        			<p class="TitreCV">EXPERIENCES</p>
