Correction de la Lisière et Photo
-Ajustement de la longueur de la lisière
-Photo arrondi

--- a/CV.html
+++ b/CV.html
@@ -13,12 +13,12 @@
 
     <body>
     	<section id="cvsection">
-    			<article id="lisiere">
-    				<figure class="PhotoProfilDesktop">
-    					<a target="_blank" href ="img/urahara.png"> <img src="img/urahara_mini.png"  alt="Photo de Profil URAHARA" title ="Cliquez sur la photo pour l'agrandir" > <!-- target="_blank" OBLIGATOIREMENT après "<a" sinon ça ne marche pas-->
+    			<section id="lisiere">
+    				<figure >
+    					<a target="_blank" href ="img/urahara.png"> <img class="PhotoProfilDesktop" src="img/urahara_mini.png"  alt="Photo de Profil URAHARA" title ="Cliquez sur la photo pour l'agrandir" > <!-- target="_blank" OBLIGATOIREMENT après "<a" sinon ça ne marche pas-->
     					</a> <!-- alt renvoie le texte si l'image ne s'affiche pas -->
-    					<figcaption>Photo de Profil </figcaption>
-    				</figure>
+    					<figcaption id="legendephotodesktop">Photo de Profil </figcaption>
+    					</figure>
 
 
     				<h2> Contact</h2>
@@ -46,16 +46,16 @@
 					<i class="fa fa-laptop-code" style="font-size:36px"></i>
 					<i class="fas fa-football-ball" style="font-size:36px;color:red"></i>
 
-				</article>
+				</section>
 
-    		<article id ="informations">
+    		<section id ="informations">
 
     			<h1>URAHARA</h1>
-					<figure class="PhotoProfilSmart">
-    					<a target="_blank" href ="img/urahara.png"> <img src="img/urahara_mini.png"  alt="Photo de Profil URAHARA" title ="Cliquez sur la photo pour l'agrandir" > <!-- target="_blank" OBLIGATOIREMENT après "<a" sinon ça ne marche pas-->
+					<figure>
+    					<a target="_blank" href ="img/urahara.png"> <img  class="PhotoProfilSmart" src="img/urahara_mini.png"  alt="Photo de Profil URAHARA" title ="Cliquez sur la photo pour l'agrandir" > <!-- target="_blank" OBLIGATOIREMENT après "<a" sinon ça ne marche pas-->
     					</a> <!-- alt renvoie le texte si l'image ne s'affiche pas -->
-    					<figcaption>Photo de Profil </figcaption>
-    				</figure>    			
+    					<figcaption id="legendephotosmart">Photo de Profil </figcaption>
+    				</figure>   			
     			<h2>Gestionnaire des flux physiques et d’informations</h2>
 
        			<p class="TitreCV">EXPERIENCES</p>
@@ -133,7 +133,7 @@
 				<span class="diplome">BAC STI ELECTRONIQUE<br/></span>
 				<span class="date">2010<br/></span>
 				<span class="etablissement">Lycée Pape Clément Bordeaux<br/><br/></span>
-			</article>
+			</section>
 
 
 		</section>
