--- a/CV.html
+++ b/CV.html
@@ -2,13 +2,15 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8" />
+   		<meta name="viewport" content="width=device-width, initial-scale=1.0", user-scalable = "yes">    
         <link rel="stylesheet" href="style.css" />
         <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">-->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
 
 
 
-        <title>CV Urahara</title>
+    	<title>CV Urahara</title>
+    	<meta name= "description" content= "Intégrateur Développeur Web, mon rôle consistera à créer et mettre en forme votre site web répondant à vos besoins en fonction de votre maquette" />
     </head>
 
     <body>
@@ -36,6 +38,7 @@
 							<li>Outils de planification/Ordonnancement (Gantt, PERT)</li>
 							<li>Utilisation de divers Prologiciel (AS400, Irium)</li>
 							<li>Word/Excel/Powerpoint/Visio/Access</li>
+							<li>HTML/CSS</li>
 						</ul>
 
 					<h2 id="loisirs"> Loisirs </h2><br/>
@@ -86,7 +89,7 @@
 				<div class="descriptifposte">
 				<span class="etablissement">CERP Agen-Job étudiant</span>
 				<span class="date">Septembre 2016 – Mars 2017<br/></span>
-				<h3>CHAUFFEUR LIVREUR</h3>	
+				<h3>LIVREUR</h3>	
 
 					<ul class="missions">
 						<li>Livraison des commandes clients suivant la tournée</li>
