--- a/CV.html
+++ b/CV.html
@@ -2,7 +2,7 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8" />
-   		<meta name="viewport" content="width=device-width, initial-scale=1.0", user-scalable = "yes">    
+   		<meta name="viewport" content="width=device-width,initial-scale=1.0">    
         <link rel="stylesheet" href="style.css" />
         <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">-->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
@@ -17,22 +17,22 @@
     	<section id="cvsection">
     			<section id="lisiere">
     				<figure >
-    					<a target="_blank" href ="img/urahara.png"> <img class="PhotoProfilDesktop" src="img/urahara_mini.png"  alt="Photo de Profil URAHARA" title ="Cliquez sur la photo pour l'agrandir" > <!-- target="_blank" OBLIGATOIREMENT après "<a" sinon ça ne marche pas-->
+    					<a id="blockphoto" target="_blank" href ="img/urahara.png"> <img class="PhotoProfilDesktop" src="img/urahara_mini.png"  alt="Photo de Profil URAHARA" title ="Cliquez sur la photo pour l'agrandir" > <!-- target="_blank" OBLIGATOIREMENT après "<a" sinon ça ne marche pas-->
     					</a> <!-- alt renvoie le texte si l'image ne s'affiche pas -->
     					<figcaption id="legendephotodesktop">Photo de Profil </figcaption>
     					</figure>
 
 
-    				<h2> Contact</h2>
+    				<h2 id="contact">Contact</h2>
 
-    				<i class="fas fa-map-marked-alt icone">  14 allée du Hueco Mundo app 220<br/>
-    				33000 KONOHA<br/><br/></i>
-    				<i class="fas fa-envelope-open-text icone">  urahara@toto.com<br/><br/></i>
-    				<i class="fas fa-mobile-alt icone">  0602233232<br/><br/></i>
+    				<i class="fas fa-map-marked-alt icone"></i><span class="coordonnees">14 allée du Hueco Mundo app 220<br/>
+    				33000 KONOHA</span><br/><br/>
+    				<i class="fas fa-envelope-open-text icone"></i><span class="coordonnees">urahara@toto.com</span><br/><br/>
+    				<i class="fas fa-mobile-alt icone"></i><span class="coordonnees">0602233232</span><br/><br/>
     			
 
-    				<h2> Compétences </h2><br/>
-						<ul id="competences">
+    				<h2 id="competences"> Compétences </h2><br/>
+						<ul >
 							<li>Méthodes de gestion des stocks</li>
 							<li>Méthodes de prévision de vente</li>
 							<li>Outils de planification/Ordonnancement (Gantt, PERT)</li>
@@ -44,28 +44,27 @@
 					<h2 id="loisirs"> Loisirs </h2><br/>
 
 					<!--<i class="fa fa-car"style="font-size:48px;""></i><br/> -->
-					<i class='fas fa-bowling-ball' style="font-size:36px"></i>
-					<i class="fa fa-medkit" style="font-size:36px"></i>
-					<i class="fa fa-laptop-code" style="font-size:36px"></i>
-					<i class="fas fa-football-ball" style="font-size:36px;color:red"></i>
+					<i class="fas fa-bowling-ball"></i><span>Bowling</span>
+					<i class="fa fa-laptop-code"></i><span> Développement WEB</span>
+					<i class="fas fa-film"></i><span>Films&Séries</span>
 
 				</section>
 
     		<section id ="informations">
 
-    			<h1>URAHARA</h1>
+    			<h1><span id="prenom">URAHARA </span> KISUKE</h1>
 					<figure>
     					<a target="_blank" href ="img/urahara.png"> <img  class="PhotoProfilSmart" src="img/urahara_mini.png"  alt="Photo de Profil URAHARA" title ="Cliquez sur la photo pour l'agrandir" > <!-- target="_blank" OBLIGATOIREMENT après "<a" sinon ça ne marche pas-->
     					</a> <!-- alt renvoie le texte si l'image ne s'affiche pas -->
     					<figcaption id="legendephotosmart">Photo de Profil </figcaption>
     				</figure>   			
-    			<h2>Gestionnaire des flux physiques et d’informations</h2>
+    			<h2><span id="titreposte">Dével</span>oppeur Web Freelance</h2>
 
        			<p class="TitreCV">EXPERIENCES</p>
 
         		<div  class="descriptifposte"> <!-- pas de titre dans la balise paragraphe -->
-        		<div  class="etablissement">CERP Bordeaux</div>
-    			<div class="date">Depuis mars 2018<br/></div>
+    			<div class="date">Depuis mars 2018<br/></div>        		
+        		<div  class="etablissement">CERP BORDEAUX</div>
     			<h3>PREPARATEUR DE COMMANDE</h3>
 
     				<ul class="missions">
@@ -74,8 +73,8 @@
     			</div>
 
     			<div class="descriptifposte">
-    			<span class="etablissement">Manitou Global Services Ancenis-Stage 12 semaines</span>
-    			<span class="date">Mars 2017 – Juin 2017</span>
+    				<span class="date">03/2017 – 06/2017</span>    				
+    				<span class="etablissement">MANITOU GLOBAL SERVICES ANCENIS <br/>Stage 12 semaines</span>
     			<h3>GESTIONNAIRE DES STOCKS</h3>   	
 
 					<ul class="missions">
@@ -87,9 +86,9 @@
 				</div>
 
 				<div class="descriptifposte">
-				<span class="etablissement">CERP Agen-Job étudiant</span>
-				<span class="date">Septembre 2016 – Mars 2017<br/></span>
-				<h3>LIVREUR</h3>	
+				<span class="date">09/2016 – 03/2017<br/></span>					
+				<span class="etablissement">CERP AGEN<br/>Job étudiant</span>
+				<h3>CHAUFFEUR LIVREUR</h3>	
 
 					<ul class="missions">
 						<li>Livraison des commandes clients suivant la tournée</li>
@@ -97,9 +96,9 @@
 					</ul>
 				</div>
 
-				<div class="descriptifposte">				
-				<span class="etablissement">CERP Bordeaux-Stage 4 semaines</span>
-				<span class="date">Janvier 2016<br/></span>
+				<div class="descriptifposte">
+				<span class="date">01/2016<br/></span>								
+				<span class="etablissement">CERP BORDEAUX<br/>Stage 4 semaines</span>
 				<h3>GESTIONNAIRE DES STOCKS</h3>
 
 					<ul class="missions">
@@ -110,8 +109,8 @@
 				</div>
 
 				<div class="descriptifposte">
-				<span class="etablissement">CERP Bordeaux-CDD</span>
-				<span class="date">2011 – 2016<br/></span>
+				<span class="date">2011 – 2016<br/></span>					
+				<span class="etablissement">CERP BORDEAUX<br/>CDD</span>
 				<h3>MAGASINIER-PREPARATEUR DE COMMANDE</h3>
 
 					<ul class="missions">
@@ -123,19 +122,19 @@
 
 				<p class="TitreCV">FORMATIONS</p>
 
-				<span class="diplome">DUT QLIO (QUALITE LOGISTIQUE INDUSTRIELLE ET ORGANISATION)<br/></span>
-				<span class="date"> 2017<br/></span>
-				<span class="etablissement">Iut de Bordeaux – Site d’Agen<br/><br/></span>
+				<span class="diplome">DUT QLIO (QUALITE LOGISTIQUE INDUSTRIELLE ET ORGANISATION)</span><br/>
+				<span class="date"> 2017</span><br/>
+				<span class="etablissementscolaire">Iut de Bordeaux – Site d’Agen</span><br/>
 
 
-				<span class="diplome">BTS IRIST (INFORMATIQUE ET RESEAUX POUR LES INDUSTRIES ET LES SERVICES TECHNIQUES)<br/></span>
-				<span class="date">2012<br/></span>
-				<span class="etablissement">Lycée Alfred Kastler Bordeaux<br/><br/></span>
+				<span class="diplome">BTS IRIST (INFORMATIQUE ET RESEAUX POUR LES INDUSTRIES ET LES SERVICES TECHNIQUES)</span><br/>
+				<span class="date">2012</span><br/>
+				<span class="etablissementscolaire">Lycée Alfred Kastler Bordeaux<br/></span>
 
 		
-				<span class="diplome">BAC STI ELECTRONIQUE<br/></span>
-				<span class="date">2010<br/></span>
-				<span class="etablissement">Lycée Pape Clément Bordeaux<br/><br/></span>
+				<span class="diplome">BAC STI ELECTRONIQUE (SCIENCES ET TECHNOLOGIES INDUSTRIELLES)<br/></span>
+				<span class="date">2010</span><br/>
+				<span class="etablissementscolaire">Lycée Pape Clément Bordeaux</span><br/>
 			</section>
 
 
