Ajout du champ Recommandation
-Correction de la largeur des bandeaux dans la lisière
-Ajout de 2 recommandations
-Mise en place d'un cercle autour des FontAwesome dans Loisirs

--- a/CV.html
+++ b/CV.html
@@ -28,13 +28,15 @@
 
 
     				<h2 id="contact">Contact</h2>
+    				<div id="blockcontact">
 
-    				<i class="fas fa-map-marked-alt icone"></i><span class="coordonnees"> Adresse : <br/>14 allée du Hueco Mundo app 220<br/>
+    				<i class="fas fa-map-marked-alt icone"></i><span class="coordonnees"><br/> Adresse : <br/>14 allée du Hueco Mundo app 220<br/>
     				33000 KONOHA</span><br/><br/>
-    				<i class="fas fa-envelope-open-text icone"></i><span class="coordonnees">Mail : <br/>urahara@toto.com</span><br/><br/>
-    				<i class="fas fa-mobile-alt icone"></i><span class="coordonnees">Téléphone : <br/>0602233232</span><br/><br/>
+    				<i class="fas fa-envelope-open-text icone"></i><span class="coordonnees"><br/>Mail : <br/>urahara@toto.com</span><br/><br/>
+    				<i class="fas fa-mobile-alt icone"></i><span class="coordonnees"><br/>Téléphone : <br/>0602233232</span><br/><br/>
+    				</div>
     			
-
+    				<div>
     				<h2 id="competences">Compétences</h2><br/>
 						<ul >
 							<li>Méthodes de gestion des stocks</li>
@@ -44,6 +46,7 @@
 							<li>Word/Excel/Powerpoint/Visio/Access</li>
 							<li>HTML/CSS</li>
 						</ul>
+					</div>	
 
 					<h2 id="loisirs">Loisirs</h2><br/>
 
@@ -92,7 +95,7 @@
 				</div>
 
 				<div class="descriptifposte">
-				<div class="date">09/2016 – 03/2017<br/>AGEN</div>				
+				<div class="date"></i>09/2016 – 03/2017<br/>AGEN</div>				
 				<div class="etablissement">CERP<br/>Job étudiant</div>
 				
 				<h3>CHAUFFEUR LIVREUR</h3>	
@@ -144,6 +147,24 @@
 				<div class="date">2010<br/>Lycée Pape Clément Bordeaux</div>	
 				<div class="diplome">BAC STI ELECTRONIQUE<br/><br/>(SCIENCES ET TECHNOLOGIES INDUSTRIELLES)<br/></div>
 				<div class="etablissementscolaire"></div>
+
+				<p class="TitreCV"><i class="fas fa-pencil-alt"></i></i>RECOMMANDATIONS</p>
+				<div id ="recommandations">
+					<div id="recommandation1">
+						VLADIMIR POUTINE<br/>
+						Président de la RUSSIE<br/>
+						Téléphone : 0554548539<br/>
+						Email : vladimir.poutine@russie.com<br/><br/>
+					</div>
+
+					<div id="recommandation2">
+						ARNOLD SCHWARZENEFFER<br/>
+						Leader de la Résistance<br/>
+						Téléphone : 0594387223<br/>
+						Email : arnold.schwarzenegger@terminator.com<br/>
+					</div>
+				</div>
+
 			</section>
 
 
