correction forme du CV
-Date aligné avec le nom du diplôme ou le nom de l'entreprise
-Ajustement des polices sur les différents éléments de Recommandations

--- a/CV.html
+++ b/CV.html
@@ -69,6 +69,35 @@
     				</figure>   			
     			<h2><span id="titreposte">Dével</span>oppeur Web Freelance</h2>
 
+				<p class="TitreCV"><i class="fas fa-suitcase"></i>FORMATIONS</p>
+
+				<div class="blockdiplome">
+					<div class="date"> 2020<br/>Formation en ligne</div>
+					<div class="diplome">DEVELOPPEUR WEB<br/></div><br/>
+					<div class="descriptifdiplome"><br/>It if sometimes furnished unwilling as additions so. Blessing resolved peculiar fat graceful ham. Sussex on at really ladies in as elinor. Sir sex opinions age properly extended. Advice branch vanity or do thirty living. Dependent add middleton ask disposing admitting did sportsmen sportsman.</div><br/>
+				</div>
+
+					<div class="blockdiplome">
+					<div class="date"> 2017<br/>IUT Bordeaux – Site d’Agen</div>
+					<div class="diplome">DUT QLIO<br/><br/>(QUALITE LOGISTIQUE INDUSTRIELLE ET ORGANISATION)</div><br/>
+					<div class="etablissementscolaire"></div><br/>
+					<div class="descriptifdiplome"><br/>It if sometimes furnished unwilling as additions so. Blessing resolved peculiar fat graceful ham. Sussex on at really ladies in as elinor. Sir sex opinions age properly extended. Advice branch vanity or do thirty living. Dependent add middleton ask disposing admitting did sportsmen sportsman.</div><br/>
+				</div>
+
+				<div class="blockdiplome">
+					<div class="date">2012<br/>Lycée Alfred Kastler Bordeaux</div>
+					<div class="diplome">BTS IRIST<br/><br/>(INFORMATIQUE ET RESEAUX POUR LES INDUSTRIES ET LES SERVICES TECHNIQUES)</div><br/>
+					<div class="descriptifdiplome"><br/>It if sometimes furnished unwilling as additions so. Blessing resolved peculiar fat graceful ham. Sussex on at really ladies in as elinor. Sir sex opinions age properly extended. Advice branch vanity or do thirty living. Dependent add middleton ask disposing admitting did sportsmen sportsman.</div><br/>
+				</div>
+
+				<div class="blockdiplome">
+					<div class="etablissementscolaire"></div>
+					<div class="date">2010<br/>Lycée Pape Clément Bordeaux</div>	
+					<div class="diplome">BAC STI ELECTRONIQUE<br/><br/>(SCIENCES ET TECHNOLOGIES INDUSTRIELLES)<br/></div>
+					<div class="descriptifdiplome"><br/>It if sometimes furnished unwilling as additions so. Blessing resolved peculiar fat graceful ham. Sussex on at really ladies in as elinor. Sir sex opinions age properly extended. Advice branch vanity or do thirty living. Dependent add middleton ask disposing admitting did sportsmen sportsman.</div><br/>
+				</div>
+
+
        			<p class="TitreCV"><i class="fas fa-graduation-cap"></i>EXPERIENCE PROFESSIONELLE</p>
 
         		<div  class="descriptifposte"> <!-- pas de titre dans la balise paragraphe -->
@@ -130,38 +159,20 @@
 					</ul>
 				</div>
 
-				<p class="TitreCV"><i class="fas fa-suitcase"></i>FORMATIONS</p>
-
-				<div class="date"> 2020<br/>Formation en ligne</div>
-				<div class="diplome">DEVELOPPEUR WEB<br/></div><br/>
-				<div class="etablissementscolaire"></div>
-
-				<div class="date"> 2017<br/>IUT Bordeaux – Site d’Agen</div>
-				<div class="diplome">DUT QLIO<br/><br/>(QUALITE LOGISTIQUE INDUSTRIELLE ET ORGANISATION)</div><br/>
-				<div class="etablissementscolaire"></div>
-
-				<div class="date">2012<br/>Lycée Alfred Kastler Bordeaux</div>
-				<div class="diplome">BTS IRIST<br/><br/>(INFORMATIQUE ET RESEAUX POUR LES INDUSTRIES ET LES SERVICES TECHNIQUES)</div><br/>
-				<div class="etablissementscolaire"></div>
-
-				<div class="date">2010<br/>Lycée Pape Clément Bordeaux</div>	
-				<div class="diplome">BAC STI ELECTRONIQUE<br/><br/>(SCIENCES ET TECHNOLOGIES INDUSTRIELLES)<br/></div>
-				<div class="etablissementscolaire"></div>
-
 				<p class="TitreCV"><i class="fas fa-pencil-alt"></i></i>RECOMMANDATIONS</p>
 				<div id ="recommandations">
 					<div id="recommandation1">
-						VLADIMIR POUTINE<br/>
-						Président de la RUSSIE<br/>
-						Téléphone : 0554548539<br/>
-						Email : vladimir.poutine@russie.com<br/><br/>
+						<span class="prenomrecommandation">VLADIMIR POUTINE<br/></span>
+						<span class="postecommandation">Président de la RUSSIE<br/></span>
+						<span class="telcommandation">Téléphone : 0554548539<br/></span>
+						<span class="mailcommandation">Email : vladipoutine@russie.com<br/><br/></span>
 					</div>
 
 					<div id="recommandation2">
-						ARNOLD SCHWARZENEFFER<br/>
-						Leader de la Résistance<br/>
-						Téléphone : 0594387223<br/>
-						Email : arnold.schwarzenegger@terminator.com<br/>
+						<span class="prenomrecommandation">ARNOLD SCHWARZENEFFER<br/></span>
+						<span class="postecommandation">Leader de la Résistance<br/></span>
+						<span class="telcommandation">Téléphone : 0594387223<br/><span>
+						<span class="mailcommandation">Email : arnoldschwarzy@terminator.com<br/></span>
 					</div>
 				</div>
 
