ajout de liste à puce fontawesome

--- a/CV.html
+++ b/CV.html
@@ -52,9 +52,9 @@
 
 					<!--<i class="fa fa-car"style="font-size:48px;""></i><br/> -->
 					<div id="fontawesome">
-						<i class="fas fa-bowling-ball"></i>
-						<i class="fa fa-laptop-code"></i>
-						<i class="fas fa-film"></i>
+						<i class="fas fa-bowling-ball loisirsfontawesome"></i>
+						<i class="fa fa-laptop-code loisirsfontawesome"></i>
+						<i class="fas fa-film loisirsfontawesome"></i>
 					</div>
 
 				</section>
@@ -69,39 +69,39 @@
     				</figure>   			
     			<h2><span id="titreposte">Dével</span>oppeur Web Freelance</h2>
 
-				<p class="TitreCV"><i class="fas fa-suitcase"></i>FORMATIONS</p>
+				<p class="TitreCV"><i class="fas fa-suitcase titrefontawesome"></i>FORMATIONS</p>
 
 				<div class="blockdiplome">
-					<div class="date"> 2020<br/>Formation en ligne</div>
+					<div class="date"><i class="far fa-dot-circle point"></i></i>2020<br/>Formation en ligne</div>
 					<div class="diplome">DEVELOPPEUR WEB<br/></div><br/>
 					<div class="descriptifdiplome"><br/>It if sometimes furnished unwilling as additions so. Blessing resolved peculiar fat graceful ham. Sussex on at really ladies in as elinor. Sir sex opinions age properly extended. Advice branch vanity or do thirty living. Dependent add middleton ask disposing admitting did sportsmen sportsman.</div><br/>
 				</div>
 
 					<div class="blockdiplome">
-					<div class="date"> 2017<br/>IUT Bordeaux – Site d’Agen</div>
+					<div class="date"><i class="fas fa-circle point"></i>2017<br/>IUT Bordeaux – Site d’Agen</div>
 					<div class="diplome">DUT QLIO<br/><br/>(QUALITE LOGISTIQUE INDUSTRIELLE ET ORGANISATION)</div><br/>
 					<div class="etablissementscolaire"></div><br/>
 					<div class="descriptifdiplome"><br/>It if sometimes furnished unwilling as additions so. Blessing resolved peculiar fat graceful ham. Sussex on at really ladies in as elinor. Sir sex opinions age properly extended. Advice branch vanity or do thirty living. Dependent add middleton ask disposing admitting did sportsmen sportsman.</div><br/>
 				</div>
 
 				<div class="blockdiplome">
-					<div class="date">2012<br/>Lycée Alfred Kastler Bordeaux</div>
+					<div class="date"><i class="fas fa-circle point"></i>2012<br/>Lycée Alfred Kastler Bordeaux</div>
 					<div class="diplome">BTS IRIST<br/><br/>(INFORMATIQUE ET RESEAUX POUR LES INDUSTRIES ET LES SERVICES TECHNIQUES)</div><br/>
 					<div class="descriptifdiplome"><br/>It if sometimes furnished unwilling as additions so. Blessing resolved peculiar fat graceful ham. Sussex on at really ladies in as elinor. Sir sex opinions age properly extended. Advice branch vanity or do thirty living. Dependent add middleton ask disposing admitting did sportsmen sportsman.</div><br/>
 				</div>
 
 				<div class="blockdiplome">
 					<div class="etablissementscolaire"></div>
-					<div class="date">2010<br/>Lycée Pape Clément Bordeaux</div>	
+					<div class="date"><i class="fas fa-circle point"></i>2010<br/>Lycée Pape Clément Bordeaux</div>	
 					<div class="diplome">BAC STI ELECTRONIQUE<br/><br/>(SCIENCES ET TECHNOLOGIES INDUSTRIELLES)<br/></div>
 					<div class="descriptifdiplome"><br/>It if sometimes furnished unwilling as additions so. Blessing resolved peculiar fat graceful ham. Sussex on at really ladies in as elinor. Sir sex opinions age properly extended. Advice branch vanity or do thirty living. Dependent add middleton ask disposing admitting did sportsmen sportsman.</div><br/>
 				</div>
 
 
-       			<p class="TitreCV"><i class="fas fa-graduation-cap"></i>EXPERIENCE PROFESSIONELLE</p>
+       			<p class="TitreCV"><i class="fas fa-graduation-cap titrefontawesome"></i>EXPERIENCE PROFESSIONELLE</p>
 
         		<div  class="descriptifposte"> <!-- pas de titre dans la balise paragraphe -->
-    			<div class="date">Depuis mars 2018<br/>BORDEAUX</div>        		
+    			<div class="date"><i class="far fa-dot-circle point"></i>Depuis mars 2018<br/>BORDEAUX</div>        		
         		<div  class="etablissement">CERP<br/>CDI</div>
     			<h3>PREPARATEUR DE COMMANDE</h3>
 
@@ -111,7 +111,7 @@
     			</div>
 
     			<div class="descriptifposte">
-    				<div class="date">03/2017 – 06/2017<br/>ANCENIS</div>    				
+    				<div class="date"><i class="fas fa-circle point"></i> 03/2017 – 06/2017<br/>ANCENIS</div> 
     				<div class="etablissement">MANITOU GLOBAL SERVICES<br/>Stage 12 semaines</div>
     			<h3>GESTIONNAIRE DES STOCKS</h3>   	
 
@@ -124,7 +124,7 @@
 				</div>
 
 				<div class="descriptifposte">
-				<div class="date"></i>09/2016 – 03/2017<br/>AGEN</div>				
+				<div class="date"><i class="fas fa-circle point"></i> 09/2016 – 03/2017<br/>AGEN</div>				
 				<div class="etablissement">CERP<br/>Job étudiant</div>
 				
 				<h3>CHAUFFEUR LIVREUR</h3>	
@@ -136,7 +136,7 @@
 				</div>
 
 				<div class="descriptifposte">
-				<div class="date">01/2016<br/>BORDEAUX</div>								
+				<div class="date"><i class="fas fa-circle point"></i> 01/2016<br/>BORDEAUX</div>
 				<div class="etablissement">CERP<br/>Stage 4 semaines</div>
 				<h3>GESTIONNAIRE DES STOCKS</h3>
 
@@ -148,7 +148,7 @@
 				</div>
 
 				<div class="descriptifposte">
-				<div class="date">2011 – 2016<br/>BORDEAUX</div>					
+				<div class="date"><i class="fas fa-circle point"></i> 2011 – 2016<br/>BORDEAUX</div>
 				<div class="etablissement">CERP<br/>CDD</div>
 				<h3>MAGASINIER-PREPARATEUR DE COMMANDE</h3>
 
@@ -159,7 +159,7 @@
 					</ul>
 				</div>
 
-				<p class="TitreCV"><i class="fas fa-pencil-alt"></i></i>RECOMMANDATIONS</p>
+				<p class="TitreCV"><i class="fas fa-pencil-alt titrefontawesome"></i></i>RECOMMANDATIONS</p>
 				<div id ="recommandations">
 					<div id="recommandation1">
 						<span class="prenomrecommandation">VLADIMIR POUTINE<br/></span>
