Correction des erreurs de code HTML

--- a/CV.html
+++ b/CV.html
@@ -16,16 +16,13 @@
     <body>
     	<section id="cvsection">
     			<section id="lisiere">
-    				<figure >
     					<div id="positionphotodesktop">
+    						<figure >
     						<a id="blockphoto" target="_blank" href ="img/urahara.png"> <img class="PhotoProfilDesktop" src="img/urahara_mini.png"  alt="Photo de Profil URAHARA" title ="Cliquez sur la photo pour l'agrandir" > <!-- target="_blank" OBLIGATOIREMENT après "<a" sinon ça ne marche pas-->
     						</a> <!-- alt renvoie le texte si l'image ne s'affiche pas -->
     						<figcaption id="legendephotodesktop">Photo de Profil </figcaption>
-    						</figure>
-    						</div>
-    					</div>	
-
-
+    						</figure >
+    					</div>
 
     				<h2 id="contact">Contact</h2>
     				<div id="blockcontact">
@@ -36,8 +33,9 @@
     				<i class="fas fa-mobile-alt icone"></i><span class="coordonnees"><br/>Téléphone : <br/>0602233232</span><br/><br/>
     				</div>
     			
-    				<div>
+    				
     				<h2 id="competences">Compétences</h2><br/>
+    				<div>
 						<ul >
 							<li>Méthodes de gestion des stocks</li>
 							<li>Méthodes de prévision de vente</li>
@@ -72,7 +70,7 @@
 				<p class="TitreCV"><i class="fas fa-suitcase titrefontawesome"></i>FORMATIONS</p>
 
 				<div class="blockdiplome">
-					<div class="date"><i class="far fa-dot-circle point"></i></i>2020<br/>Formation en ligne</div>
+					<div class="date"><i class="far fa-dot-circle point"></i>2020<br/>Formation en ligne</div>
 					<div class="diplome">DEVELOPPEUR WEB<br/></div><br/>
 					<div class="descriptifdiplome"><br/>It if sometimes furnished unwilling as additions so. Blessing resolved peculiar fat graceful ham. Sussex on at really ladies in as elinor. Sir sex opinions age properly extended. Advice branch vanity or do thirty living. Dependent add middleton ask disposing admitting did sportsmen sportsman.</div><br/>
 				</div>
@@ -159,19 +157,19 @@
 					</ul>
 				</div>
 
-				<p class="TitreCV"><i class="fas fa-pencil-alt titrefontawesome"></i></i>RECOMMANDATIONS</p>
+				<p class="TitreCV"><i class="fas fa-pencil-alt titrefontawesome"></i>RECOMMANDATIONS</p>
 				<div id ="recommandations">
 					<div id="recommandation1">
 						<span class="prenomrecommandation">VLADIMIR POUTINE<br/></span>
 						<span class="postecommandation">Président de la RUSSIE<br/></span>
-						<span class="telcommandation">Téléphone : 0554548539<br/></span>
+						<span class="telrecommandation">Téléphone : 0554548539<br/></span>
 						<span class="mailcommandation">Email : vladipoutine@russie.com<br/><br/></span>
 					</div>
 
 					<div id="recommandation2">
-						<span class="prenomrecommandation">ARNOLD SCHWARZENEFFER<br/></span>
+						<span class="prenomrecommandation">ARNOLD SCHWARZENEGGER<br/></span>
 						<span class="postecommandation">Leader de la Résistance<br/></span>
-						<span class="telcommandation">Téléphone : 0594387223<br/><span>
+						<span class="telrecommandation">Téléphone : 0594387223<br/></span>
 						<span class="mailcommandation">Email : arnoldschwarzy@terminator.com<br/></span>
 					</div>
 				</div>
