Ajout de "OpenClassRooms"

--- a/CV.html
+++ b/CV.html
@@ -70,7 +70,7 @@
 				<p class="TitreCV"><i class="fas fa-suitcase titrefontawesome"></i>FORMATIONS</p>
 
 				<div class="blockdiplome">
-					<div class="date"><i class="far fa-dot-circle point"></i>2020<br/>Formation en ligne</div>
+					<div class="date"><i class="far fa-dot-circle point"></i>2020<br/>OpenClassRooms</div>
 					<div class="diplome">DEVELOPPEUR WEB<br/></div><br/>
 					<div class="descriptifdiplome"><br/>It if sometimes furnished unwilling as additions so. Blessing resolved peculiar fat graceful ham. Sussex on at really ladies in as elinor. Sir sex opinions age properly extended. Advice branch vanity or do thirty living. Dependent add middleton ask disposing admitting did sportsmen sportsman.</div><br/>
 				</div>
